Bug 32592 - Asus UL30VT backlight control only works with acpi_osi="Linux" acpi_osi="!Windows 2009"
Summary: Asus UL30VT backlight control only works with acpi_osi="Linux" acpi_osi="!Win...
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Video (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Lan Tianyu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-04 03:16 UTC by Alex Williamson
Modified: 2013-02-08 18:31 UTC (History)
5 users (show)

See Also:
Kernel Version: 3.2
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Asus UL30VT Bios 211 DSDT (467.86 KB, text/plain)
2011-04-04 03:16 UTC, Alex Williamson
Details
DSDT.hex (558.56 KB, patch)
2011-07-25 02:53 UTC, Lan Tianyu
Details | Diff
debug.patch (583 bytes, patch)
2012-11-29 03:32 UTC, Lan Tianyu
Details | Diff

Description Alex Williamson 2011-04-04 03:16:50 UTC
Created attachment 53362 [details]
Asus UL30VT Bios 211 DSDT

Asus UL30VT backlight control only works with acpi_osi="Linux" acpi_osi="!Windows 2009".  Without these options, I get a desktop notification for the brightness when using the Fn brightness up/down keys, but no change in display brightness.  Likewise the sysfs brightness control thinks it's doing it's job when I read and write the file, but there's no change in the display state.  Either method causes the display brightness to change when the system is rebooted, as if Linux setup the change, but didn't actually flush it out to hardware.
Comment 1 Lan Tianyu 2011-07-25 02:53:24 UTC
Created attachment 66492 [details]
DSDT.hex

Please override the DSDT.hex and try again.
Comment 2 Alex Williamson 2011-08-01 02:34:41 UTC
(In reply to comment #1)
> Created an attachment (id=66492) [details]
> DSDT.hex
> 
> Please override the DSDT.hex and try again.

No change in behavior with custom DSDT (booting without any acpi_osi options, I get desktop notification from pressing the brightness buttons, but no change in brightness).  I see this in my dmesg to confirm the DSDT is being loaded:

[    0.000000] ACPI: Override [DSDT-UL30V200], this is unsafe: tainting kernel
Comment 3 Lan Tianyu 2011-08-01 03:20:31 UTC
The dsdt identifies linux or windows and goes through different code path.
So have to set the acpi_osi. 
Please attach output of the dimcode in order to  make a quirk in the kernel.
Comment 4 Alex Williamson 2011-08-01 03:30:53 UTC
Is this what we want to settle for?  Brightness buttons that work, but aren't passed to the OSPM, a constant battle where the desktop app idea of brightness and the platform brightness are rarely in sync?  It works under Windows, it works under splashtop (though who knows if they're just passing similar parameters), we should be able to make it work better.
Comment 5 Lan Tianyu 2011-08-01 06:27:49 UTC
Please check whether load the asus-laptop.ko.

If not, load and try again without set acpi_osi. 
If it didn't work, try again with set acpi_blacklight=vendor.
Comment 6 Zhang Rui 2012-01-18 03:25:34 UTC
It's great that the kernel bugzilla is back.

Can you please verify if the problem still exists in the latest upstream kernel?
Comment 7 Alex Williamson 2012-01-22 15:18:24 UTC
No change on v3.2.  Booting with no acpi command line args, the brightness hotkeys are recognized by linux, but do nothing.  Manually poking brightness sysfs files also does nothing.
Comment 8 Zhang Rui 2012-11-13 09:00:40 UTC
does loading asus-laptop driver help?
Comment 9 Zhang Rui 2012-11-28 03:12:38 UTC
ping...
Comment 10 Alex Williamson 2012-11-28 03:25:04 UTC
(In reply to comment #8)
> does loading asus-laptop driver help?

No, it doesn't.  asus_laptop reports "Backlight controlled by ACPI video driver"
Comment 11 Lan Tianyu 2012-11-28 03:41:15 UTC
Can you try with param "acpi_blacklight=vendor"?
Comment 12 Alex Williamson 2012-11-28 05:00:06 UTC
(In reply to comment #11)
> Can you try with param "acpi_blacklight=vendor"?

Yes, I get backlight control with that.
Comment 13 Lan Tianyu 2012-11-29 03:32:12 UTC
Created attachment 87671 [details]
debug.patch

Ok. Great. Please try this patch.
Comment 14 Alex Williamson 2012-11-29 05:42:05 UTC
(In reply to comment #13)
> Created an attachment (id=87671) [details]
> debug.patch
> 
> Ok. Great. Please try this patch.

Seems to work, backlight control with no extra kernel options.  Thanks!
Comment 15 Lan Tianyu 2012-11-29 06:40:55 UTC
Welcome.
Patch has been sent to ACPI maillist.
https://patchwork.kernel.org/patch/1820321/
Comment 16 Florian Mickler 2012-12-22 09:28:41 UTC
A patch referencing this bug report has been merged in Linux v3.8-rc1:

commit d0c2ce16bec0afa6013b4c5220ca4c9c67210215
Author: Lan Tianyu <tianyu.lan@intel.com>
Date:   Fri Nov 30 13:02:50 2012 +0100

    ACPI / video: Add "Asus UL30VT" to ACPI video detect blacklist

Note You need to log in before you can comment on or make changes to this bug.